# quotes_stream

./: .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml  test_tickers.txt  test_tickers_2.txt  test_tickers_3.txt  test_tickers_4.txt
.github/workflows/: rust.yml
src/: lib.rs
src/shared/: constants.rs  error.rs  mod.rs
